--- a/4-Kalitim/4-Inheritance.csproj
+++ b/4-Kalitim/4-Inheritance.csproj
@@ -3,9 +3,16 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>_4_Kalitim</RootNamespace>
+    <RootNamespace>_4_Inheritance</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <Folder Include="Bilgisayar\" />
+    <Folder Include="Hayvanlar\" />
+    <Folder Include="Kutuphane\" />
+    <Folder Include="Okul\" />
+  </ItemGroup>
 
 </Project>
