hayvanlar added, personeller updated

--- a/4-Kalitim/4-Inheritance.csproj
+++ b/4-Kalitim/4-Inheritance.csproj
@@ -10,7 +10,7 @@
 
   <ItemGroup>
     <Folder Include="Bilgisayar\" />
-    <Folder Include="Hayvanlar\" />
+    <Folder Include="Hayvanlar\Genel\NewFolder\" />
     <Folder Include="Kutuphane\" />
     <Folder Include="Okul\" />
   </ItemGroup>
