--- a/10-Interface/10-Interface.csproj
+++ b/10-Interface/10-Interface.csproj
@@ -8,4 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Personeller\Abstract\" />
+    <Folder Include="Personeller\Concrete\" />
+  </ItemGroup>
+
 </Project>
